add button style component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         possimus quia natus unde, suscipit mollitia tempore autem cumque, placeat maxime provident. Eaque itaque
         voluptatum nostrum exercitationem culpa reprehenderit pariatur sunt corrupti modi, quos, distinctio maxime quod
         natus ipsum quaerat officiis rerum saepe. Minus, et.</p>
+    <a class="button__primary" href="/">Button Primary</a>
+    <a class="button__danger" href="/">Button Danger</a>
+    <a class="button__outlined" href="/">Button Outlined</a>
+    <a class="button__secondary" href="/">Button Secondary</a>
+    <a class="button__disabled" href="/">Button Disabled</a>
 </body>
 
 </html>
